tests/ui/imports/ambiguous-3.stderr
error[E0659]: `x` is ambiguous
  --> $DIR/ambiguous-3.rs:5:5
   |
LL |     x();
   |     ^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `x` could refer to the function imported here
  --> $DIR/ambiguous-3.rs:17:13
   |
LL |     pub use self::b::*;
   |             ^^^^^^^^^^
   = help: consider adding an explicit import of `x` to disambiguate
note: `x` could also refer to the function imported here
  --> $DIR/ambiguous-3.rs:18:13
   |
LL |     pub use self::c::*;
   |             ^^^^^^^^^^
   = help: consider adding an explicit import of `x` to disambiguate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
